--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
         "@auth0/auth0-react": "^1.9.0",
         "@dicebear/adventurer-neutral": "^4.10.2",
         "@dicebear/avatars": "^4.10.2",
+        "@mantine/core": "^4.0.7",
+        "@mantine/dropzone": "^4.0.7",
+        "@mantine/hooks": "^4.0.7",
+        "@mantine/notifications": "^4.0.7",
         "@testing-library/jest-dom": "^5.16.2",
         "@testing-library/react": "^12.1.3",
         "@testing-library/user-event": "^13.5.0",
