New implemented features including bug fixes Personal messages Group chats soon..

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@auth0/auth0-react": "^1.9.0",
         "@dicebear/adventurer-neutral": "^4.10.2",
         "@dicebear/avatars": "^4.10.2",
+        "@fortawesome/react-fontawesome": "^0.1.18",
         "@mantine/core": "^4.0.7",
         "@mantine/dropzone": "^4.0.7",
         "@mantine/hooks": "^4.0.7",
@@ -19,6 +20,7 @@
         "@types/react-dom": "^17.0.11",
         "@types/react-router": "^5.1.18",
         "@types/react-router-dom": "^5.3.3",
+        "@types/socket.io-client": "^3.0.0",
         "@types/sockjs": "^0.3.33",
         "@types/styled-components": "^5.1.23",
         "axios": "^0.26.0",
@@ -27,22 +29,26 @@
         "crypto-browserify": "^3.12.0",
         "css-select": "^4.2.1",
         "emoji-picker-react": "^3.5.1",
+        "engine.io-client": "^6.1.1",
         "jwt-decode": "^3.1.2",
         "moment": "^2.29.1",
         "react": "^17.0.2",
+        "react-detect-click-outside": "^1.1.2",
         "react-dom": "^17.0.2",
         "react-icons": "^4.3.1",
         "react-jwt": "^1.1.4",
         "react-router": "^6.2.1",
         "react-router-dom": "^6.2.1",
         "react-scripts": "^5.0.0",
+        "socket.io-client": "^4.4.1",
         "sockjs": "^0.3.24",
         "styled-components": "^5.3.3",
         "tippy.js": "^6.3.7",
         "typescript": "^4.5.5",
         "usehooks-ts": "^2.4.0",
         "web-vitals": "^2.1.4",
-        "webpack": "^5.69.1"
+        "webpack": "^5.69.1",
+        "ws": "^8.5.0"
     },
     "scripts": {
         "start": "react-scripts start",
